Week12/homework/httpserver/httpserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
  selector:
    app: httpserver
  type: NodePort
